<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>io.github.jonasrutishauser</groupId>
		<artifactId>parent</artifactId>
		<version>40</version>
	</parent>

	<groupId>io.github.jonasrutishauser.liberty</groupId>
	<artifactId>liberty-features</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<url>${url}</url>
	<name>Liberty Features</name>

	<modules>
		<module>liberty-micrometer</module>
		<module>liberty-micrometer-1.0</module>
		<module>features-bom</module>
		<module>liberty-features-test</module>
		<module>features</module>
		<module>liberty-micrometer-dependencies</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.openliberty</groupId>
				<artifactId>openliberty-kernel</artifactId>
				<version>${openliberty.version}</version>
				<type>zip</type>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-bom</artifactId>
				<version>1.16.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>6.0.3</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>6.0.0</version>
					<extensions>true</extensions>
					<configuration>
						<instructions>
							<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
							<Bundle-Name>${project.name}</Bundle-Name>
							<Bundle-Version>${project.version}</Bundle-Version>
						</instructions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.aries</groupId>
					<artifactId>esa-maven-plugin</artifactId>
					<version>1.0.2</version>
					<extensions>true</extensions>
					<configuration>
						<generateManifest>true</generateManifest>
						<archiveContent>all</archiveContent>
						<instructions>
							<IBM-Feature-Version>2</IBM-Feature-Version>
							<IBM-ShortName>${project.name}</IBM-ShortName>
							<IBM-AppliesTo>io.openliberty;productVersion="${openliberty.version}+"</IBM-AppliesTo>
							<Subsystem-Type>osgi.subsystem.feature</Subsystem-Type>
							<Subsystem-SymbolicName>${project.groupId}.${project.artifactId}; visibility:=public; singleton:=true</Subsystem-SymbolicName>
							<Subsystem-Vendor>io.github.jonasrutishauser</Subsystem-Vendor>
						</instructions>
					</configuration>
				</plugin>
				<plugin>
					<groupId>io.openliberty.tools</groupId>
					<artifactId>liberty-maven-plugin</artifactId>
					<version>3.12.0</version>
					<executions>
						<execution>
							<id>pre-clean</id>
							<goals>
								<goal>stop</goal>
							</goals>
							<phase>pre-clean</phase>
						</execution>
						<execution>
							<id>prepare-package</id>
							<goals>
								<goal>create</goal>
								<goal>install-feature</goal>
							</goals>
							<phase>prepare-package</phase>
						</execution>
						<execution>
							<id>package</id>
							<goals>
								<goal>deploy</goal>
							</goals>
							<phase>package</phase>
						</execution>
						<execution>
							<id>pre-integration-test</id>
							<goals>
								<goal>start</goal>
							</goals>
							<phase>pre-integration-test</phase>
						</execution>
						<execution>
							<id>post-integration-test</id>
							<goals>
								<goal>stop</goal>
							</goals>
							<phase>post-integration-test</phase>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<properties>
		<root.artifactId>liberty-features</root.artifactId>

		<openliberty.version>26.0.0.2</openliberty.version>

		<maven.compiler.release>17</maven.compiler.release>
	</properties>

	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-jxr-plugin</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>jxr-no-fork</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>io.openliberty.tools</groupId>
							<artifactId>liberty-maven-plugin</artifactId>
							<configuration>
								<features>
									<verify>all</verify>
								</features>
								<keys>
									<jonasrutishauser>
										<keyid>0x29B5398CFE794AA6</keyid>
										<keyurl>https://keys.openpgp.org/vks/v1/by-fingerprint/C4AFDEE80A5D5FB9E8F30B5829B5398CFE794AA6</keyurl>
									</jonasrutishauser>
								</keys>
							</configuration>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>

	<scm>
		<connection>${scm.connection}</connection>
		<developerConnection>${scm.developerConnection}</developerConnection>
		<url>${scm_url}</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<site>
			<id>github</id>
			<url>${distributionManagement.site.url}</url>
		</site>
	</distributionManagement>
</project>
